# resonix-node

./: .gitignore  .gitmodules  AUTHORS  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.linux  Dockerfile.windows  LICENSE  README.md  Resonix.toml  SECURITY.md  build.rs  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: publish-docker.yml  release.yml
assets/app/: icon.icns
examples/discord-js-bot/: .env.example  README.md  package.json  pnpm-lock.yaml
examples/discord-js-bot/src/: index.js
src/: main.rs
src/api/: handlers.rs
src/audio/: decoder.rs  dsp.rs  mod.rs  player.rs  source.rs  track.rs
src/cli/: mod.rs
src/config/: mod.rs
src/middleware/: auth.rs
src/resolver/: mod.rs
src/state/: mod.rs
src/utils/: enc.rs  ffmpeg.rs  mod.rs  stdu.rs  tools.rs
