[package]
name = "resonix-node"
version = "0.2.8"
edition = "2021"
description = "High-performance audio node. HTTP/WebSocket server that resolves and streams audio using Symphonia and yt-dlp."
license = "BSD-3-Clause"
repository = "https://github.com/lumixland/Resonix"
homepage = "https://github.com/lumixland/Resonix"
documentation = "https://docs.rs/resonix-node"
readme = "README.md"
keywords = ["audio", "discord", "streaming", "yt-dlp", "symphonia"]
categories = ["audio", "multimedia", "network-programming", "web-programming::http-server"]
rust-version = "1.74"
build = "build.rs"

[dependencies]
anyhow = "1.0.99"
thiserror = "2.0.14"
bytes = "1"
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process", "io-util"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
sysinfo = "0.37"
dashmap = "6"
regex = "1"
url = "2"
ctrlc = "3"
bytemuck = "1.23.2"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "stream"] }
tempfile = "3"
symphonia = { version = "0.5", features = [
  "aac",
  "mp3",
  "flac",
  "vorbis",
  "isomp4",
  "ogg",
  "mkv",
  "wav",
  "alac"
] }
rustube = { version = "0.6", default-features = false, features = [
  "download",
  "std",
  "rustls-tls",
] }
toml = "0.9"
rspotify = { version = "0.15", default-features = false, features = [
  "client-reqwest",
  "reqwest-rustls-tls",
] }
dotenvy = "0.15"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
zip = "0.4"
tar = "0.4"
xz2 = "0.1"

[badges]
docsrs = {}
maintenance = { status = "actively-developed" }

[build-dependencies]
winres = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[package.metadata.bundle]
name = "Resonix"
identifier = "dev.resonix.node"
icon = ["assets/app/icon.icns"]