[package]
name = "resonix-node"
version = "0.3.0"
edition = "2021"
description = "High-performance relay-based audio node. HTTP/WebSocket server that resolves and streams audio using ffmpeg and Riva."
license = "BSD-3-Clause"
repository = "https://github.com/resonix-dev/resonix"
homepage = "https://github.com/resonix-dev/resonix"
readme = "README.md"
keywords = ["audio", "discord", "streaming", "riva", "ffmpeg"]
categories = ["audio", "multimedia", "network-programming", "web-programming::http-server"]
rust-version = "1.74"
build = "build.rs"

[dependencies]
anyhow = "1.0.99"
thiserror = "2.0.16"
bytes = "1"
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "process", "fs"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
sysinfo = "0.37"
dashmap = "6"
regex = "1.11.2"
url = "2.5.7"
ctrlc = "3"
bytemuck = "1.23.2"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "stream"] }
tempfile = "3.21.0"
toml = "0.9"
rspotify = { version = "0.15.1", default-features = false, features = [
  "client-reqwest",
  "reqwest-rustls-tls",
] }
# Force vendored OpenSSL for any transitive native-tls users to avoid system OpenSSL requirements on CI
native-tls = { version = "0.2", features = ["vendored"] }
dotenvy = "0.15"
base64 = "0.22"
uuid = { version = "1.18.1", features = ["v4"] }
riva = "0.1.0"
once_cell = "1.20"
tar = "0.4"
xz2 = "0.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[badges]
docsrs = {}
maintenance = { status = "actively-developed" }

[build-dependencies]
winres = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[package.metadata.bundle]
name = "Resonix"
identifier = "dev.resonix.node"
icon = ["assets/app/icon.icns"]